ajout fichier test des animations et sprites sheets du deplacement vers le bas des types 1 et 2 en normal et en shadow

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 
   <body>
     <canvas id="gameCanvas" width="1020" height="510"></canvas>
-    <!-- <script src="/component/selectCharacter.js"></script> -->
-    <script src="/component/collision.js"></script>
-    <script src="/component/classe.js"></script>
-    <script src="/component/index.js"></script>
+    <script src="./component/collision.js"></script>
+    <script src="./component/classe.js"></script>
+    <script src="./component/index.js"></script>
   </body>
 </html>
