--- a/index.html
+++ b/index.html
@@ -12,5 +12,12 @@
     <script src="./component/collision.js"></script>
     <script src="./component/classe.js"></script>
     <script src="./component/index.js"></script>
+    <script src="./inventory.js"></script>
+    <script>
+      addItem('Food',5);
+      addItem('Water',10);
+      addItem('Medicine',2);
+      showInventory();
+    </script>
   </body>
 </html>
