--- a/index.html
+++ b/index.html
@@ -10,14 +10,8 @@
   <body>
     <canvas id="gameCanvas" width="1020" height="510"></canvas>
     <script src="./component/collision.js"></script>
+    <script src="./component/spawner.js"></script>
     <script src="./component/classe.js"></script>
     <script src="./component/index.js"></script>
-    <script src="./inventory.js"></script>
-    <script>
-      addItem('Food',5);
-      addItem('Water',10);
-      addItem('Medicine',2);
-      showInventory();
-    </script>
   </body>
 </html>
