--- a/tmpl/Accueil.html
+++ b/tmpl/Accueil.html
@@ -8,5 +8,6 @@
             <div class = "titre">
                 <h1>Accueil</h1>
             </div>
+            <button>Jouer</button>
     </body>
 </html> 
