--- a/index.html
+++ b/index.html
@@ -9,9 +9,28 @@
 
   <body>
     <canvas id="gameCanvas" width="1020" height="510"></canvas>
+    <div id="pauseWindow" class="pause-window">
+      <div class="pause-content">
+        <h2>Menu</h2>
+          <button onclick="resume();">Resume</button>
+          <button onclick="hideCanvas();">EXIT</button>
+      </div>
+    </div>
+
+    <div class="game-menu" id="gameMenu" style="display: none;">
+      <div class="game-menu-content">
+        <h2>Menu</h2>
+        <button onclick="play();">Play</button>
+      </div>
+    </div>
+
+
+
+
     <script src="./component/collision.js"></script>
     <script src="./component/spawner.js"></script>
     <script src="./component/classe.js"></script>
     <script src="./component/index.js"></script>
+    <script src="./component/utils.js"></script>
   </body>
 </html>
