ajout des commentaires

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <script src="./component/collision.js"></script>
     <script src="./component/classe.js"></script>
     <script src="./component/index.js"></script>
-    <script src="./inventory.js"></script>
+    <script src="./component/inventory.js"></script>
   </body>
 </html>
