ia allie finit mais bug dans leur animation

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GameName</title>
-    <link rel="stylesheet" href="/css/stylegame.css" />
+    <link rel="stylesheet" href="./css/stylegame.css" />
   </head>
 
   <body>
@@ -13,5 +13,8 @@
     <script src="./component/spawner.js"></script>
     <script src="./component/classe.js"></script>
     <script src="./component/index.js"></script>
+    <div id="hud">
+      Number of allies (type 1) : <span id="allies1Number"></span>
+  </div>
   </body>
 </html>
