fix du bug (quand on quitte le jeu et qu'on replay ça se met en pause)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <br>
         <button onclick="optionFromGame();">Options</button>
         <br>
-        <button onclick="hideCanvas();">Exit</button>
+        <button onclick="exit();">Exit</button>
       </div>
     </div>
 
