--- a/tmpl/Accueil.html
+++ b/tmpl/Accueil.html
@@ -2,7 +2,6 @@
 <html>
     <head>
           <meta charset="utf-8">
-          <link rel="stylesheet" href="D:\Etudes informatique\Challenge-js\JS\css\Accueil.css">
     </head> 
     <body>
             <div class = "titre">
@@ -10,4 +9,41 @@
             </div>
             <button>Jouer</button>
     </body>
+    <style>
+        body{
+            background-image: url("https://i.redd.it/mnslf2y8hxab1.gif"); 
+            background-size: cover;
+        }
+        .titre{
+            text-align: center;
+            font-size:150% ; 
+            color: antiquewhite;
+        }
+        button {
+            background: #fbca1f;
+            font-family: inherit;
+            padding: 0.6em 1.3em;
+            font-weight: 900;
+            font-size: 18px;
+            border: 3px solid black;
+            border-radius: 0.4em;
+            box-shadow: 0.1em 0.1em;
+            cursor: pointer;
+            margin-left: 45%;
+            margin-top: 15%;
+            size: 100em;
+            height: 100%;
+            width: 10%;
+          }
+          
+          button:hover {
+            transform: translate(-0.05em, -0.05em);
+            box-shadow: 0.15em 0.15em;
+          }
+          
+          button:active {
+            transform: translate(0.05em, 0.05em);
+            box-shadow: 0.05em 0.05em;
+        }
+    </style>
 </html> 
