--- a/tmpl/victory.html
+++ b/tmpl/victory.html
@@ -1,83 +1,42 @@
 <!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Victoire</title>
-    <link rel="stylesheet" href="/static/stylegame.css" />
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Page de victoire</title>
+    </head>
+    <body>
+        <h1>Félicitations !</h1>
+        <p>Vous avez gagné !</p>
+        <button>Rejouer</button>
+    </body>
     <style>
         body {
-            background-image: url('https://cdn.discordapp.com/attachments/1190789714270228612/1216074929527853167/Sans_titre.png?ex=65ff1108&is=65ec9c08&hm=15b6dd171dc25b264735b4db35a6d2e1b70ba2b87c98db4e8d3ecc91f6264f2d&');
-            background-size: cover;
-            background-position: center;
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+        background-image: url('https://i.pinimg.com/originals/ca/e0/1a/cae01ab5cce960db0d7819cc96e97ce8.png');
+        background-size: cover;
+        background-position-y: 43%;
+        color: #fff;
+        font-family: 'Pixel', Arial, sans-serif;
+        text-align: center;
         }
-
-        .canvas {
-            text-align: center;
-            background-color: rgba(255, 255, 255, 0.8); /* Ajoute un fond semi-transparent pour une meilleure lisibilité du contenu */
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-        }
-
         h1 {
-            color: #156202;
-            font-size: 50px;
+        font-size: 50px;
+        margin-top: 100px;
         }
-
         p {
-            color: #333;
-            font-size: 50px; /* Augmente la taille du texte */
+        font-size: 24px;
+        margin-top: 50px;
         }
-
-        .emoji {
-            font-size: 70px; /* Taille de l'emoji */
-            animation: rotateEmoji 2s infinite linear;
+        button {
+        background-color: #fff;
+        border: none;
+        color: #000;
+        font-size: 24px;
+        padding: 10px 20px;
+        cursor: pointer;
+        margin-top: 50px;
         }
-
-        @keyframes rotateEmoji {
-            from {
-                transform: rotate(0deg);
-            }
-            to {
-                transform: rotate(360deg);
-            }
-        }
-
-        .btnReturn {
-            background-color: #026417;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            padding: 10px 20px;
-            font-size: 16px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-        .btnReturn:hover {
-            background-color: #000204;
+        button:hover {
+        background-color: #ddd;
         }
     </style>
-</head>
-<body>
-    <div class="canvas">
-        <h1>Vous avez Gagné!</h1>
-        <p>Félicitations !! <span class="emoji">&#128079;</span></p> 
-        <footer>
-            <a href="../index.html">  
-                <button class="btnReturn">
-                    <span class="text">←<br>Retour</span>
-                </button>
-            </a>
-        </footer>
-    </div>
-</body>
 </html>
