--- a/tmpl/Accueil.html
+++ b/tmpl/Accueil.html
@@ -7,7 +7,7 @@
             <div class = "titre">
                 <h1>Accueil</h1>
             </div>
-            <button>Jouer</button>
+            <button><a href="D:\Etudes informatique\Challenge-js\JS\index.html">Jouer</a></button>
     </body>
     <style>
         body{
