--- a/tmpl/victory.html
+++ b/tmpl/victory.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Félicitations !</h1>
         <p>Vous avez gagné !</p>
-        <button>Rejouer</button>
+        <button><a href="D:\Etudes informatique\Challenge-js\JS\index.html">Rejouer</a></button>
     </body>
     <style>
         body {
