--- a/tmpl/defeat.html
+++ b/tmpl/defeat.html
@@ -7,7 +7,7 @@
 <body>
   <h1>Désolé !</h1>
   <p>Vous avez perdu.</p>
-  <button>Réessayer</button>
+  <button><a href="D:\Etudes informatique\Challenge-js\JS\index.html">Réessayer</a></button>
 </body>
 <style>
     body {
