ajout d'une barre d'xp + affichage dans le HUD

--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
 
     <div class="loose-menu" id="looseMenu" style="display: none;">
       <div class="loose-menu-content">
-        <h2 class="gametitle2">YOU LOST</h2>
+        <h2 class="gametitle2">YOU DIED</h2>
+        <h3 id="playerScore">Score : </h3>        
         <button onclick="exit();">Retry</button>
       </div>
     </div>
